# genetic_algorithm_example-

./: README.md  item.py  main.py  pyproject.toml  restricoes.py
